--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "angular": "^1.5.8",
-    "angular-ui-router": "^0.3.1",
+    "angular-animate": "^1.5.8",
+    "angular-ui-bootstrap": "^2.2.0",
+    "angular-ui-router": "^0.3.2",
+    "angularjs-toaster": "^2.1.0",
     "bootstrap": "^3.3.7",
     "express": "^4.14.0"
   }
