--- a/package.json
+++ b/package.json
@@ -16,6 +16,12 @@
     "angular-ui-router": "^0.3.2",
     "angularjs-toaster": "^2.1.0",
     "bootstrap": "^3.3.7",
-    "express": "^4.14.0"
+    "camelcase": "^3.0.0",
+    "decamelize": "^1.2.0",
+    "express": "^4.14.0",
+    "i": "^0.3.5"
+  },
+  "devDependencies": {
+    "browserify": "^13.1.1"
   }
 }
