--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "angular": "^1.5.8",
     "angular-animate": "^1.5.8",
+    "angular-highlightjs": "^0.6.2",
     "angular-ui-bootstrap": "^2.2.0",
     "angular-ui-router": "^0.3.2",
     "angularjs-toaster": "^2.1.0",
@@ -19,6 +20,7 @@
     "camelcase": "^3.0.0",
     "decamelize": "^1.2.0",
     "express": "^4.14.0",
+    "highlightjs": "^9.8.0",
     "i": "^0.3.5"
   },
   "devDependencies": {
