--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "angular": "^1.5.8",
     "angular-animate": "^1.5.8",
     "angular-highlightjs": "^0.6.2",
+    "angular-sanitize": "^1.5.8",
+    "angular-schema-form": "^0.8.13",
     "angular-ui-bootstrap": "^2.2.0",
     "angular-ui-router": "^0.3.2",
     "angularjs-toaster": "^2.1.0",
@@ -21,7 +23,9 @@
     "decamelize": "^1.2.0",
     "express": "^4.14.0",
     "highlightjs": "^9.8.0",
-    "i": "^0.3.5"
+    "i": "^0.3.5",
+    "objectpath": "^1.2.1",
+    "tv4": "^1.2.7"
   },
   "devDependencies": {
     "browserify": "^13.1.1"
